# redpill

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: client.example.toml  server.example.toml
crates/redpill-quic/: Cargo.toml
crates/redpill-quic/src/: acme.rs  auth.rs  batch.rs  browser_profile.rs  camouflage.rs  cert.rs  client.rs  config.rs  control.rs  daemon.rs  datagram.rs  decoy.rs  demux.rs  fingerprint.rs  ip_pool.rs  ipc.rs  killswitch.rs  lib.rs  metrics.rs  noop_cc.rs  padding.rs  priority.rs  reality.rs  server.rs  shaper.rs  stats.rs  users.rs  xdp.rs
crates/redpill-quic/src/transport/: health.rs  manager.rs  mod.rs  quic_camouflaged.rs  quic_raw.rs  tcp_reality.rs  websocket_cdn.rs
crates/redpill-quic/tests/: integration.rs
crates/redpill-tun/: Cargo.toml
crates/redpill-tun/src/: device.rs  route.rs
docs/: README.ar.md  README.fa.md  README.ru.md  README.zh-CN.md
