[workspace]
members = ["crates/redpill-quic", "crates/redpill-tun"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/redpill-vpn/redpill"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
rand = "0.8"
bytes = "1"
nix = { version = "0.29", features = ["ioctl", "net"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
dashmap = "6"
parking_lot = "0.12"
tokio-util = "0.7"
socket2 = "0.5"
hmac = "0.12"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
