[package]
name = "redpill-quic"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "redpill-server"
path = "src/server.rs"

[[bin]]
name = "redpill-client"
path = "src/client.rs"

[features]
default = []
acme = ["arc-swap"]
xdp = []

[dependencies]
arc-swap = { version = "1", optional = true }
quinn = { version = "0.11", features = ["runtime-tokio", "log"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
socket2 = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
anyhow = "1"
async-trait = "0.1"
rustls-pemfile = "2"
hmac = "0.12"
sha2 = { workspace = true }
rand = { workspace = true }
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
dashmap = { workspace = true }
prometheus = "0.13"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio-rustls = "0.26"
tokio-tungstenite = "0.24"
webpki-roots = "0.26"
futures-util = "0.3"
serde_json = "1"
redpill-tun = { path = "../redpill-tun" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
