[package]
name = "redpill-tun"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
wintun = "0.5"
windows-sys = { version = "0.59", features = ["Win32_NetworkManagement_IpHelper"] }
